# coverage-sh

./: .editorconfig  .gitignore  README.md  pyproject.toml
.github/workflows/: centos7.yml  lint_test.yml  release.yml
coverage_sh/: __init__.py  models.py  parsers.py  plugin.py  searches.py  utils.py
coverage_sh/queries/: query.scm
tests/: conftest.py  test_all.py  test_parsers.py  test_plugin.py  test_searches.py
tests/resources/: invalid_syntax.sh  syntax_example.sh
tests/resources/examples/: shell-file.weird.suffix
tests/resources/examples/.dummy_dir/: dummy_file.sh
tests/resources/syntax_examples/: for_loop.sh  for_loop_break.sh  for_loop_continue.sh  function.sh  if_statement.sh  multiple_elifs_example.sh  no_branch.sh  while_loop.sh
tests/resources/testproject/: main.py  multiple_elifs_example.sh  pyproject.toml  syntax_example.sh  test.sh
