[project]
name = "coverage-sh"
version = "0.5.0"
description = "A  Coverage.py plugin to measure code coverage of shell scripts from python."
authors = [
    { name = "Kilian Lackhove", email = "kilian@lackhove.de" }
]
dependencies = [
    "coverage[toml]>=7.3.3",
    "python-magic>=0.4.27",
    "tree-sitter<0.22",
    "tree-sitter-languages>=1.8.0",
]
readme = "README.md"
requires-python = ">= 3.8"
license = { text = "MIT" }
keywords = ["coverage", "plugin", "shell", "bash", "sh"]
classifiers = [
    "Development Status :: 2 - Pre-Alpha",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Typing :: Typed",
]

[project.optional-dependencies]
dev = [
    "ruff==0.3.2",
    "mypy>=1.9.0",
    "pytest>=7.4.3",
    "setuptools>=69.0.2",
    "types-tree-sitter-languages>=1.10.0.20240201",
    "coverage-conditional-plugin>=0.9.0,<0.10.0",
]

[project.urls]
homepage = "https://github.com/lackhove/coverage-sh"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["coverage_sh"]


[tool.ruff]

# Same as Black.
line-length = 88
indent-width = 4

# Assume Python 3.8
target-version = "py38"

exclude = ["tests/resources"]

[tool.ruff.lint]
select = ["ALL"]
ignore = [
    "E501", # Line too long
    "D", # missing docstring
    "ANN101", # Missing type annotation for `self` in method
    "ANN204", # Missing return type annotation for special method `__init__`
    "ANN002", # Missing type annotation for `*args`
    "ANN003", # Missing type annotation for `**kwargs`
    "S603", # subprocess-without-shell-equals-true
    "TD", # flake8-todos
    "FIX", #flake8-fixme
    "COM812", "ISC001", # ruff format says these should be disabled
    "D211", # no-blank-line-before-class -> incompatible with D203
    "D213", #multi-line-summary-second-line -> incompatible with D212
    "TRY003", # Avoid specifying long messages outside the exception class
    "EM102", # Exception must not use an f-string literal, assign to variable first
]

[tool.ruff.per-file-ignores]
"tests/**/*.py" = ["ANN", "D", "S101", "PLR2004", "N802", "PT015", "B011", "INP001", "FBT001", "T201"]
"tests/resources/**/*.py" = ["ALL"]

[tool.mypy]
strict = true

[tool.pytest.ini_options]
log_level = "DEBUG"
log_format = "%(asctime)s [%(threadName).32s] [%(levelname)-s] [%(name)s] (%(module)s:%(funcName)s:%(lineno)d) %(message)s"
log_date_format = "%Y-%m-%dT%H:%M:%S%z"
addopts = [
    # "--log-disable=coverage_sh.plugin.coverage_trace",
    # "--log-disable=coverage_sh.parsers",
    # "--log-disable=coverage_sh.parsers.ShellFileParser.trace",
]
filterwarnings = [
    "ignore:Already imported a file that will be measured.*(coverage_sh/plugin.py|tests/.*) \\(already-imported\\):coverage.exceptions.CoverageWarning",
]

[tool.coverage.run]
relative_files = true
branch = true
source = ["coverage_sh", "tests"]
source_pkgs = ["coverage_sh"]
omit = ["coverage_sh/__init__.py"]
plugins = ["coverage_conditional_plugin"]

[tool.coverage.paths]
source = ["coverage_sh/", "**/site-packages/coverage_sh/"]

[tool.coverage.report]
exclude_also = [
    "pragma: false negative",
    "@overload",
    "\\.\\.\\.",
    "if TYPE_CHECKING:",
    "if __name__ == [\"']__main__[\"']:",
    "case _ as unreachable[^:]*:",
    "assert_never",
]

[tool.coverage.coverage_conditional_plugin.rules]
no-cover-if-python-gte-39 = "sys_version_info >= (3, 9)"
no-cover-if-python-lt-39 = "sys_version_info < (3, 9)"
no-cover-if-python-gte-310 = "sys_version_info >= (3, 10)"
no-cover-if-python-lt-310 = "sys_version_info < (3, 10)"

